Refinements and tests to logging overhaul: - Added date to default file logging - Created LoggingConfig.forceVerboseFileEncoder() which is run when UMS is started in forced trace mode. It makes sure that timestamps are full (including date and time) and that logger name (calling class) is included in the file logging output. Doesn't change configuration, but dynamically alters pattern format. - Refinements to LoggingConfig:   - Made all public static calls synchronized even though I don't think most of them will ever need it   - Avoided a potential bug in the very unlikely event that multiple console or frame appenders existed in a configuration   - Renamed syslogDisabled() to isSyslogDisabled() - Fixed a string comparison bug in TracesTab (using !=) - Fixed a very unlikely corner case bug in CustomJSpinner and SpinnerIntModel - Added testIsValidFileName() and testAppendPathSeparator() to FileUtilTest
- Created PmsConfigurationTest (only containing tests for logging parameters, but extendable)
- Created LoggingTest test all classes in package net.pms.logging
- Created ViewLevelTest
- Created SpinnerIntModelTest
- Created TextAreaFIFOTest
- Created IteratorsTest